Move ConceptNetRestApi into separate project

--- a/ConceptNet.Tests/ConceptNet.Tests.csproj
+++ b/ConceptNet.Tests/ConceptNet.Tests.csproj
@@ -25,6 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\ConceptNet.Rest\ConceptNet.Rest.csproj" />
         <ProjectReference Include="..\ConceptNet\ConceptNet.csproj" />
     </ItemGroup>
 
