--- a/ConceptNet.Rest/ConceptNet.Rest.csproj
+++ b/ConceptNet.Rest/ConceptNet.Rest.csproj
@@ -2,24 +2,21 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>12</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-    </PropertyGroup>
-
-    <PropertyGroup>
-        <Title>Concept.Net</Title>
-        <Version>0.1.0</Version>
-        <PackageVersion>$(Version)-beta</PackageVersion>
-        <Description>Consume ConceptNet 5 data from multiple sources.</Description>
+        <LangVersion>12</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
+        <PackageReference Include="Flurl.Http" Version="4.0.2" />
         <PackageReference Include="PolySharp" Version="1.14.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ConceptNet\ConceptNet.csproj" />
     </ItemGroup>
 
 </Project>
